--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
         registration:
           google:
             client-name: google
-            client-id: 1054191936758-m269sc8r45lni33fabu2o61ifesenrg9.apps.googleusercontent.com
-            client-secret: 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
+            client-id:
+            client-secret:
             scope: profile
 logging:
   level:
